'그라데이션추가/gitignore'

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
       margin: 5px 10px;
     }
     .back-ground {
-      background-image: url("2.jpg");
+      background-image: 
+        linear-gradient(to right, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.7)),
+        url("img/background.jpg");
       width: 100%;
       height: 300px;
       background-size: cover;
@@ -104,7 +106,7 @@
     <!-- 사이드 메뉴 -->
     <header class="card vh-100" style="min-width: 302px;">
       <div class="card-header text-center py-5 px-4">
-        <img src="1.jpg" class="rounded-circle" alt="img">
+        <img src="img/profile.jpg" class="rounded-circle" alt="img">
         <div class="mt-2">
           <h3 class="fw-bold">Lee Seung Hwan</h3>
           <p class="m-0 small">꾸준히 성장하는 개발자</p>
@@ -212,7 +214,7 @@
       <div class="offcanvas-body">
         <div class="card" style="min-width: 302px;">
           <div class="card-header text-center py-5 px-4">
-            <img src="1.jpg" class="rounded-circle" alt="img">
+            <img src="img/profile.jpg" class="rounded-circle" alt="img">
             <div class="mt-2">
               <h3 class="fw-bold">Lee Seung Hwan</h3>
               <p class="m-0 small">꾸준히 성장하는 개발자</p>
@@ -319,7 +321,7 @@
           <h1 class="fw-bold text-light">책임감을 가지고 주체적으로 일하는<br/>개발자 이승환입니다</h1>
           <p class="fs-5 fw-bold m-0 text-light">&lt;<span class="text-danger">code</span>&gt; 최선을 다 한다 &lt;<span class="text-danger">/code</span>&gt;</p>
         </div>
-        <img src="3.png" class="position-absolute top-50 translate-middle-y" style="bottom: 0; right: -16px; width: 275px;">
+        <img src="img/mainProfile.png" class="position-absolute top-50 translate-middle-y" style="bottom: 0; right: -16px; width: 275px;">
       </div>
       <!-- 메인 middle -->
       <div class="ms-3 main-middle d-flex justify-content-around flex-wrap my-5 pt-5">
@@ -505,7 +507,7 @@
                 </div><br/>
                 프로젝트 계획
                 <div class="ps-3">
-                  <img src="5.png" class="w-100" alt="semi-project-img">
+                  <img src="img/theKplan.png" class="w-100" alt="semi-project-img">
                 </div><br/>
                 맡은 역할
                 <div class="ps-3">
@@ -517,7 +519,7 @@
                 </div><br/>
                 결과
                 <div class="ps-3">
-                  <img src="6.png" class="w-100" alt="chatGPT-project-img">
+                  <img src="img/theK.png" class="w-100" alt="chatGPT-project-img">
                 </div>
               </div>
             </div>
@@ -564,7 +566,7 @@
                 <div class="ps-3">
                   → 블로그 하루 평균 방문자 수 <span class="text-danger">100명</span> 증가<br/>
                   → 애드센스(광고) <span class="text-danger">승인</span> <br/>
-                  <img src="4.png" class="w-100" alt="chatGPT-project-img">
+                  <img src="img/AutoBlogResult.png" class="w-100" alt="chatGPT-project-img">
                 </div>
               </div>
             </div>
