--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
               <div class="text-end mb-2">
                 <a href="https://github.com/seunghwan94/semi-theK" class="text-secondary text-decoration-none">github 바로가기</a> 
                 <span class="text-secondary"> | </span>
-                <a href="http://mplace.site:8080/k" class="text-secondary text-decoration-none">사이트 바로가기</a>
+                <a href="http://k.mplace.site" class="text-secondary text-decoration-none">사이트 바로가기</a>
               </div>
               <h5 class="text-danger fw-bold">K-컬쳐 관광객 커뮤니티(정보) 플랫폼 개발 프로젝트</h5>
               <div class="p-2">
