--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="d-flex justify-content-between">
           <p class="fw-bold">교육</p>
-          <p class="text-secondary">더 조은 컴퓨터 아카데미(구로)</p>
+          <p class="text-secondary">AWS 풀스택 웹 앱 개발자</p>
         </div>
 
         <hr>
@@ -231,7 +231,7 @@
             </div>
             <div class="d-flex justify-content-between">
               <p class="fw-bold">교육</p>
-              <p class="text-secondary">더 조은 컴퓨터 아카데미(구로)</p>
+              <p class="text-secondary">AWS 풀스택 웹 앱 개발자</p>
             </div>
     
             <hr>
@@ -339,7 +339,7 @@
         </div>
         <div class="d-flex align-items-center">
           <p class="fw-bold text-danger">6 개월</p>
-          <p class="ms-2">더조은아카데미(구로)</p>
+          <p class="ms-2">AWS 풀스택 웹 앱 개발자(교육)</p>
         </div>
       </div>
       <!-- 메인 bottom -->
