'프로젝트더보기'

--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
         <!-- 메인 bottom -3 -->
         <div class="d-flex align-items-end my-4 main-bottom-title">
           <p class="fw-bold fs-5 m-0 me-1">Project</p>
+          <a href="https://gentle-chokeberry-d27.notion.site/Seunghwan-Lee-e92f24b810e24d1f84a0fbbceca7b764" class="text-secondary text-decoration-none"> (Project 더 보기)</a>
         </div>
 
 
